# rust-project-generator

./: Cargo.toml  README.md
src/: custom_error.rs  github_api.rs  main.rs
