[package]
name = "rust-project-generator"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "rpg"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
home = "0.5.9"
homedir = "0.2.1"
read_input = "0.8.6"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
